developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_name_contains_invalid_character-store.kmn
c Description: Verifies that kmc reports an error with invalid names in groups, stores, and deadkeys

store(&NAME) 'error_name_contains_invalid_character-store'

begin unicode > use(main)

store(testtest) 'test'

group(main) using keys
  + [K_A] > 'a'
